tests/errors/args3.bfasm1
macro test addr address
    bf_mov addr 100
    bf_mov :0 addr

test :4

#[error: translator 2 16 ]